# otsdaq_mu2e

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  db_setup_ots.sh.template
Data/: TriggerConfigurations
Data/ConfigurationInfo/: DTCInterfaceConfigurationInfo.xml  DesktopIconConfigurationInfo.xml  FESlowControlsConfigurationInfo.xml  GroupAliasesConfigurationInfo.xml  IterationCommandBeginLabelConfigurationInfo.xml  IterationCommandConfigureAliasConfigurationInfo.xml  IterationCommandExecuteMacroConfigurationInfo.xml  MessageFacilityConfigurationInfo.xml  Mu2eGlobalsConfigurationInfo.xml  ROCInterfaceConfigurationInfo.xml  RawDataSaverConsumerConfigurationInfo.xml  StateMachineConfigurationInfo.xml  XDAQApplicationConfigurationInfo.xml
Data/ConfigurationInfo.updateots.bk/: DTCInterfaceConfigurationInfo.xml  DataManagerConfigurationInfo.xml  DesktopIconConfigurationInfo.xml  DesktopWindowParameterConfigurationInfo.xml  FESupervisorConfigurationInfo.xml  IterateConfigurationInfo.xml  IterationCommandExecuteFEMacroConfigurationInfo.xml  IterationCommandExecuteMacroConfigurationInfo.xml  IterationCommandModifyGroupConfigurationInfo.xml  IterationCommandRunConfigurationInfo.xml  IterationPlanConfigurationInfo.xml  StateMachineConfigurationInfo.xml  TheSupervisorConfigurationInfo.xml  XDAQApplicationConfigurationInfo.xml  XDAQContextConfigurationInfo.xml
Data/MacroMakerModeConfigurations/: MacroMakerModeFhiclDump.fcl
Data/MessageFacilityConfigurations/: MessageFacility.fcl  MessageFacilityGen.fcl  MessageFacilityWithCout.fcl  MessageFacilityWiz.fcl  QuietForwarder.cfg  QuietForwarderGen.cfg  QuietForwarderWiz.cfg  msgviewer.fcl
Data/RootDisplayConfigData/: AllPlanes.rcfg
Data/ServiceData/: ActiveConfigurationGroups.cfg  ActiveTableGroups.cfg  ActiveTableGroups.cfg.1554744897  StartOTS_action_mu2edaq04.fnal.gov.cmd
Data/TableInfo/: ARTDAQAggregatorSourceTableInfo.xml  (+62 more)
DataDCS/: TriggerConfigurations
UserScripts/: SendAlarmToSlack.py
UserWebGUI/: ServiceData
doc/: CMakeLists.txt  build_instructions.org  code_repositories.org  configure_and_run.org  db_tables.org  dtc.org  hardware.org  mu2e_build_instructions.org  otsdaq_mu2e.org  otsdaq_q_and_a.org  otsdaq_terminology.org  partitions.org  postgres_db.org  rocs.org  trace.org  xdaq.org
otsdaq-mu2e/: CMakeLists.txt
otsdaq-mu2e/ArtModules/: CMakeLists.txt  HistoReceiver.cc  HistoReceiver.hh  HistoSender.cc  HistoSender.hh  OtsInput_source.cc  WFViewer_module.cc  WFViewer_module.cc.bkup
otsdaq-mu2e/ArtModules/detail/: RawEventQueueReader.cc  RawEventQueueReader.hh
otsdaq-mu2e/CFOandDTCCore/: CFOandDTCCoreVInterface.cc  CFOandDTCCoreVInterface.h  CMakeLists.txt
otsdaq-mu2e/ControlsInterfacePlugins/: CMakeLists.txt  ControlsOtsInterface.h  ControlsOtsInterface_controls.cc  EpicsInterface.h  EpicsInterface_monitor.cc
otsdaq-mu2e/DataProcessorPlugins/: CMakeLists.txt  DQMHistoContainer.h  DQMMu2eHistoConsumer.h  DQMMu2eHistoConsumer_processor.cc  DemoDQMHistosConsumer.h  DemoDQMHistosConsumer_processor.cc
otsdaq-mu2e/DemoRootUtilities/: CMakeLists.txt  DemoDQMHistos.cc  DemoDQMHistos.h
otsdaq-mu2e/DetectorReader/: CMakeLists.txt
otsdaq-mu2e/FEInterfaces/: CAPTANSignalGenerator.h  CAPTANSignalGenerator_interface.cc  CFOFrontEndInterface.h  CFOFrontEndInterfaceImpl.cc  CFOFrontEndInterface_interface.cc  CFOFrontEndInterface_interface.cc~  CMakeLists.txt  CMakeLists.txt~  DTCFrontEndInterface.h  DTCFrontEndInterface.h~  DTCFrontEndInterfaceImpl.cc  DTCFrontEndInterface_interface.cc  ROCCoreInterface.h  ROCCoreInterface_interface.cc  ROCCoreVEmulator.h  ROCCoreVEmulator_interface.cc  ROCCoreVInterface_interface.cc  ROCDTCHardwareEmulated.h  ROCDTCHardwareEmulated_interface.cc  ROCInterface.cc  ROCInterface.h  ROCPolarFireCoreInterface.h  ROCPolarFireCoreInterfaceImpl.cc  ROCPolarFireCoreInterface_interface.cc  my_cntl.cc
otsdaq-mu2e/Generators/: CMakeLists.txt  DataGenReceiver.hh  DataGenReceiver.hh.bkup  DataGenReceiver_generator.cc  DataGenReceiver_generator.cc.bkup  STIBReceiver.hh  STIBReceiver_generator.cc
otsdaq-mu2e/InterfaceTest/: CMakeLists.txt  DemoInterfaceTestMain.cc  RunInterfaceTest.sh
otsdaq-mu2e/Overlays/: CMakeLists.txt  DataGenFragment.hh  DataGenFragmentWriter.hh  FragmentType.cc  FragmentType.hh
otsdaq-mu2e/Overlays/bkup/: DataGenFragment.hh  DataGenFragmentWriter.hh  FragmentType.cc  FragmentType.hh  STIBFragment.cc  STIBFragment.hh  STIBFragmentWriter.hh
otsdaq-mu2e/ROCCore/: CMakeLists.txt  ROCCoreVInterface.cc  ROCCoreVInterface.h
otsdaq-mu2e/RunInfoPlugins/: CMakeLists.txt  DBRunInfo.h  DBRunInfo_runInfo.cc  DBRunInfo_runinfo.cc
otsdaq-mu2e/TablePlugins/: CMakeLists.txt  DTCInterfaceTable.h  DTCInterfaceTable_table.cc
otsdaq-mu2e/TemplateDirectory/: CMakeLists.txt  TemplateSupervisor.cc  TemplateSupervisor.h
test/: CFOFrontEndInterface_TestMain.cc  CMakeLists.txt  DTCFrontEndInterface_ExtCFOMain.cc  DTCFrontEndInterface_TestMain.cc  ots_udp_hw_emulator.cpp  ots_udp_sw_emulator.cpp  udp_data_emulator.cpp
tools/: CMakeLists.txt  EclipseBuild.sh  MacroMakerModeFhiclDump_edit.fcl  boot_from_flash_both_DTCs.sh  boot_from_flash_both_DTCs.tcl  build-mu2e_tdaq.sh  check_status.sh  collect.sh  create_mu2e_ops_snapshot.sh  create_mu2e_ots_snapshot.sh  create_mu2e_user_snapshot.sh  distributed_setup_ots.sh  erase_flash_both_DTCs.sh  erase_flash_both_DTCs.tcl  generate_plotscript.sh  get_mu2e_snapshot_data.sh  get_mu2e_snapshot_database.sh  get_tutorial_artdaq_data.sh  get_tutorial_artdaq_database.sh  get_tutorial_data.sh  get_tutorial_database.sh  install_ots_repo.sh  mu2e_tdaq_software-cfg-1.00.00  multi_udp_send_artdaq.py  program_both_DTCs.sh  program_both_DTCs.tcl  program_both_DTCs_AL9.sh  program_flash_both_DTCs.sh  program_flash_both_DTCs.tcl  program_flash_one_FPGA.sh  program_flash_one_FPGA.tcl  program_one_FPGA.sh  program_one_FPGA.tcl  program_one_FPGA_AL9.sh  quick-mrb-start.sh  quick_mu2e_ots_install.sh  quick_mu2e_trigger_ots_install.sh  reset_PCIe.sh  reset_PCIe_AL9.sh  reset_both_JAs_AL9.sh  (+13 more)
ups/: product_deps  product_deps~
(+718 files in other folders)
